Fix issue with testing on JDK 25