@@ -397,6 +397,7 @@
       <properties>
         <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
 	         --add-opens=java.base/java.util=ALL-UNNAMED
+	         -XX:+EnableDynamicAgentLoading
 	</argLine>
       </properties>
       <build>
@@ -462,6 +463,7 @@
       <properties>
         <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
 	         --add-opens=java.base/java.util=ALL-UNNAMED
+	         -XX:+EnableDynamicAgentLoading
 	</argLine>
       </properties>
       <build>
